Final until now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(correctMissingLeftZeroForTime)
 export(isCorrectTime)
 export(isCorrectedDate)
 export(isTheLengthOfAllTimeValuesThree)
+export(notExistedValues)
 export(wrongDateValues)
 export(wrongTimeValues)
