Adding function to test if all values are not null

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(areValuesExisted)
 export(correctMissingLeftZeroForTime)
+export(doesItContainNullValues)
 export(isCorrectTime)
 export(isCorrectedDate)
 export(isTheLengthOfAllTimeValuesThree)
