--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,4 +6,4 @@ Date: 2015-05-23
 Author: William Kinaan
 Maintainer: William Kinaan <w.kinaan@gmail.com>
 Description: It contains all the functions required to solve the desco practial project.
-License: Open License
+License: MIT
