--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,4 @@ Author: William Kinaan
 Maintainer: William Kinaan <w.kinaan@gmail.com>
 Description: It contains all the functions required to solve the desco practial project.
 License: MIT
+Enconding: UTF-8
